--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "@types/node": "^14.14.36"
   }
 }
