--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESnext",
+    "target": "Esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true
   }
