--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.41",
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
-  }
+  },
+  "dependencies": {}
 }
