--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava"
   },
   "ava": {
+    "timeout": "10m",
     "extensions": {
       "ts": "module"
     },
@@ -21,6 +22,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.169",
+    "@types/node": "^15.0.3",
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
