--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "ava": "^3.15.0",
+    "install": "^0.13.0",
+    "npm": "^7.14.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
