--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^15.6.1",
     "ava": "^3.15.0",
+    "lodash": "^4.17.21",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
