--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^15.12.2",
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security"
   }
 }
