--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^3.15.0",
+    "lodash": "^4.17.21",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
