--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.3.1",
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
