--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.11.2",
     "ava": "^3.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
