--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava"
   },
   "ava": {
+    "timeout":"10m",
     "extensions": {
       "ts": "module"
     },
@@ -24,5 +25,8 @@
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
