--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ava"
   },
   "ava": {
-    "timeout":"10m",
+    "timeout": "10m",
     "extensions": {
       "ts": "module"
     },
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.10",
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
