--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ava/typescript":"^3.0.1",
+    "@ava/typescript": "^3.0.1",
+    "@types/node": "^17.0.10",
     "ava": "^3.15.0",
-    "jsonfile":"^6.1.0",
-    "minimist":"^1.2.5",
+    "jsonfile": "^6.1.0",
+    "minimist": "^1.2.5",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
-    "yarn":"^1.22.17"
+    "yarn": "^1.22.17"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
