--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.21",
+    "lodash": "^4.17.21"
   }
 }
