--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "ava": "^3.15.0",
     "lodash": "^4.17.21",
     "ts-node": "^10.4.0",
