--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "extensions": {
       "ts": "module"
     },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
-    },
     "nodeArguments": [
       "--loader=ts-node/esm"
     ]
@@ -21,8 +18,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "@types/node": "^18.0.3",
+    "ava": "^4.1.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
