--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.6.3",
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
