--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "extensions": {
       "ts": "module"
     },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
-    },
     "nodeArguments": [
       "--loader=ts-node/esm"
     ]
@@ -24,5 +21,8 @@
     "ava": "^4.3.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "loadash": "^1.0.0"
   }
 }
