--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava"
   },
   "ava": {
+    "timeout": "10m",
     "extensions": {
       "ts": "module"
     },
@@ -21,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.23",
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
