--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-ava",
   "version": "1.0.0",
-  "description": "",
+  "description": "- Forkear este repo\r - Clonar tu fork\r - Crear y exportar la clase **ListaDeProductos** que extiende la clase **ListaDeCosas**.\r - La clase **ListaDeProductos** debe:\r   - tener un método addProduct que reciba una instancia de la clase **Product** como parámetro y la agregue usando el método **add** que ya existe en la superclase. El método debe validar que no exista un producto con el mismo id antes de agregarlo\r   - extender el constructor original para que además de recibir un nombre para la lista, lea el archivo **products.json** y agregue todos los productos del JSON usando el método addProduct\r   - tener un método **getProduct(id:number):Product** que devuelva el producto con ese **id**\r   - tener un método **removeProduct(id:number):Product** que elimine el producto con ese **id**\r   - tener un método **getSortedByPrice** que reciba un parametro **order:string** con solo dos valores posibles: \"asc\" o \"desc\". (Chequear este link https://mariusschulz.com/blog/string-literal-types-in-typescript#string-literal-types-and-union-types). Este método debe devolver toda la lista de productos **Product[]** en orden _ascendente_ o _descendente_ dependiendo del parámetro **order** usando https://lodash.com/docs/4.17.15#orderBy\r - Correr los tests localmente ejecutando `npm run test`y crear un Pull Request desde GitHub",
   "main": "index.ts",
   "scripts": {
     "test": "ava"
@@ -21,8 +21,267 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.23",
     "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.2"
-  }
+  },
+  "dependencies": {
+    "aggregate-error": "^3.1.0",
+    "ansi-regex": "^5.0.0",
+    "anymatch": "^3.1.1",
+    "ansi-styles": "^5.1.0",
+    "array-find-index": "^1.0.2",
+    "acorn-walk": "^8.2.0",
+    "acorn": "^8.8.0",
+    "arg": "^4.1.3",
+    "argparse": "^1.0.10",
+    "ansi-align": "^3.0.0",
+    "array-union": "^2.1.0",
+    "arrgv": "^1.0.2",
+    "arrify": "^2.0.1",
+    "balanced-match": "^1.0.0",
+    "binary-extensions": "^2.2.0",
+    "astral-regex": "^2.0.0",
+    "bl": "^4.1.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "base64-js": "^1.5.1",
+    "blueimp-md5": "^2.18.0",
+    "boxen": "^5.0.0",
+    "buffer": "^5.7.1",
+    "buffer-from": "^1.1.1",
+    "chalk": "^4.1.0",
+    "cacheable-request": "^6.1.0",
+    "chokidar": "^3.5.1",
+    "chunkd": "^2.0.1",
+    "ci-info": "^2.0.0",
+    "ci-parallel-vars": "^1.0.1",
+    "callsites": "^3.1.0",
+    "camelcase": "^6.2.0",
+    "clean-stack": "^2.2.0",
+    "clean-yaml-object": "^0.1.0",
+    "cli-cursor": "^3.1.0",
+    "cli-truncate": "^2.1.0",
+    "cliui": "^7.0.4",
+    "clone": "^1.0.4",
+    "cli-spinners": "^2.6.0",
+    "code-excerpt": "^3.0.0",
+    "cli-boxes": "^2.2.1",
+    "common-path-prefix": "^3.0.0",
+    "clone-response": "^1.0.2",
+    "concat-map": "^0.0.1",
+    "concordance": "^5.0.4",
+    "configstore": "^5.0.1",
+    "color-name": "^1.1.4",
+    "crypto-random-string": "^2.0.0",
+    "currently-unhandled": "^0.4.1",
+    "convert-to-spaces": "^1.0.2",
+    "date-time": "^3.1.0",
+    "debug": "^4.3.1",
+    "color-convert": "^2.0.1",
+    "decompress-response": "^3.3.0",
+    "defaults": "^1.0.3",
+    "deep-extend": "^0.6.0",
+    "create-require": "^1.1.1",
+    "del": "^6.0.0",
+    "defer-to-connect": "^1.1.3",
+    "convert-source-map": "^1.7.0",
+    "dir-glob": "^3.0.1",
+    "dot-prop": "^5.3.0",
+    "emittery": "^0.8.1",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.2",
+    "equal-length": "^1.0.1",
+    "diff": "^4.0.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "esprima": "^4.0.1",
+    "fast-diff": "^1.2.0",
+    "esutils": "^2.0.3",
+    "fast-glob": "^3.2.5",
+    "fastq": "^1.11.0",
+    "figures": "^3.2.0",
+    "find-up": "^4.1.0",
+    "fill-range": "^7.0.1",
+    "end-of-stream": "^1.4.4",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "duplexer3": "^0.1.4",
+    "get-caller-file": "^2.0.5",
+    "glob": "^7.1.6",
+    "escape-goat": "^2.1.1",
+    "glob-parent": "^5.1.2",
+    "globby": "^11.0.2",
+    "graceful-fs": "^4.2.6",
+    "has-flag": "^4.0.0",
+    "get-stream": "^4.1.0",
+    "global-dirs": "^3.0.0",
+    "hosted-git-info": "^2.8.8",
+    "has": "^1.0.3",
+    "got": "^9.6.0",
+    "ignore": "^5.1.8",
+    "has-yarn": "^2.1.0",
+    "ignore-by-default": "^2.0.0",
+    "import-lazy": "^2.1.0",
+    "import-local": "^3.0.2",
+    "imurmurhash": "^0.1.4",
+    "http-cache-semantics": "^4.1.0",
+    "inflight": "^1.0.6",
+    "indent-string": "^4.0.0",
+    "ieee754": "^1.2.1",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "irregular-plurals": "^3.2.0",
+    "is-arrayish": "^0.2.1",
+    "is-core-module": "^2.2.0",
+    "is-extglob": "^2.1.1",
+    "is-error": "^2.2.2",
+    "ini": "^2.0.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.1",
+    "is-interactive": "^1.0.0",
+    "is-npm": "^5.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-cwd": "^2.2.0",
+    "is-path-inside": "^3.0.3",
+    "is-promise": "^4.0.0",
+    "is-plain-object": "^5.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "is-typedarray": "^1.0.0",
+    "is-installed-globally": "^0.4.0",
+    "js-string-escape": "^1.0.1",
+    "js-tokens": "^4.0.0",
+    "json-parse-better-errors": "^1.0.2",
+    "js-yaml": "^3.14.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "is-yarn-global": "^0.3.0",
+    "lines-and-columns": "^1.1.6",
+    "load-json-file": "^5.3.0",
+    "locate-path": "^5.0.0",
+    "keyv": "^3.1.0",
+    "lodash": "^4.17.21",
+    "json-buffer": "^3.0.0",
+    "latest-version": "^5.1.0",
+    "log-symbols": "^4.1.0",
+    "make-dir": "^3.1.0",
+    "make-error": "^1.3.6",
+    "lru-cache": "^6.0.0",
+    "lowercase-keys": "^1.0.1",
+    "matcher": "^3.0.0",
+    "map-age-cleaner": "^0.1.3",
+    "merge2": "^1.4.1",
+    "mem": "^8.1.0",
+    "md5-hex": "^3.0.1",
+    "micromatch": "^4.0.2",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "ms": "^2.1.3",
+    "mimic-response": "^1.0.1",
+    "normalize-path": "^3.0.0",
+    "normalize-package-data": "^2.5.0",
+    "once": "^1.4.0",
+    "ora": "^5.4.0",
+    "onetime": "^5.1.2",
+    "minimist": "^1.2.5",
+    "p-event": "^4.2.0",
+    "normalize-url": "^4.5.0",
+    "p-limit": "^2.3.0",
+    "p-defer": "^1.0.0",
+    "p-timeout": "^3.2.0",
+    "p-finally": "^1.0.0",
+    "p-try": "^2.2.0",
+    "parse-json": "^4.0.0",
+    "parse-ms": "^2.1.0",
+    "p-locate": "^4.1.0",
+    "p-cancelable": "^1.1.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "package-json": "^6.5.0",
+    "path-type": "^4.0.0",
+    "picomatch": "^2.2.2",
+    "p-map": "^4.0.0",
+    "pify": "^4.0.1",
+    "pkg-conf": "^3.1.0",
+    "plur": "^4.0.0",
+    "pkg-dir": "^4.2.0",
+    "pretty-ms": "^7.0.1",
+    "prepend-http": "^2.0.0",
+    "path-parse": "^1.0.6",
+    "queue-microtask": "^1.2.2",
+    "readdirp": "^3.5.0",
+    "pump": "^3.0.0",
+    "read-pkg": "^5.2.0",
+    "pupa": "^2.1.1",
+    "readable-stream": "^3.6.0",
+    "require-directory": "^2.1.1",
+    "rc": "^1.2.8",
+    "resolve": "^1.20.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "registry-url": "^5.1.0",
+    "restore-cursor": "^3.1.0",
+    "reusify": "^1.0.4",
+    "registry-auth-token": "^4.2.1",
+    "rimraf": "^3.0.2",
+    "responselike": "^1.0.2",
+    "safe-buffer": "^5.1.2",
+    "semver": "^7.3.4",
+    "run-parallel": "^1.2.0",
+    "serialize-error": "^7.0.1",
+    "signal-exit": "^3.0.3",
+    "slice-ansi": "^3.0.0",
+    "slash": "^3.0.0",
+    "spdx-correct": "^3.1.1",
+    "semver-diff": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.19",
+    "spdx-license-ids": "^3.0.7",
+    "string-width": "^4.2.2",
+    "stack-utils": "^2.0.3",
+    "strip-ansi": "^6.0.0",
+    "strip-bom": "^3.0.0",
+    "sprintf-js": "^1.0.3",
+    "supertap": "^2.0.0",
+    "temp-dir": "^2.0.0",
+    "time-zone": "^1.0.0",
+    "supports-color": "^7.2.0",
+    "string_decoder": "^1.3.0",
+    "strip-json-comments": "^2.0.1",
+    "trim-off-newlines": "^1.0.1",
+    "to-regex-range": "^5.0.1",
+    "typedarray-to-buffer": "^3.1.5",
+    "unique-string": "^2.0.0",
+    "update-notifier": "^5.1.0",
+    "to-readable-stream": "^1.0.0",
+    "v8-compile-cache-lib": "^3.0.1",
+    "util-deprecate": "^1.0.2",
+    "url-parse-lax": "^3.0.0",
+    "wcwidth": "^1.0.1",
+    "validate-npm-package-license": "^3.0.4",
+    "well-known-symbols": "^2.0.0",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^4.0.0",
+    "type-fest": "^0.3.1",
+    "y18n": "^5.0.5",
+    "yargs": "^16.2.0",
+    "yn": "^3.1.1",
+    "yargs-parser": "^20.2.7",
+    "widest-line": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicoleabliz/extendiendo-clases.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nicoleabliz/extendiendo-clases/issues"
+  },
+  "homepage": "https://github.com/nicoleabliz/extendiendo-clases#readme"
 }
