--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "test-ava",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "test": "ava"
-  },
-  "ava": {
-    "extensions": {
-      "ts": "module"
+    "name": "test-ava",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "scripts": {
+        "test": "ava"
     },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "ava": "^3.15.0",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.2"
     },
-    "nodeArguments": [
-      "--loader=ts-node/esm"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
-  }
+    "ava": {
+        "extensions": [
+            "ts"
+        ],
+        "require": [
+            "ts-node/register"
+        ]
+    },
+    "dependencies": {
+        "@types/node": "^18.11.0",
+        "lodash": "^4.17.21"
+    }
 }
