--- a/package.json
+++ b/package.json
@@ -7,22 +7,20 @@
     "test": "ava"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
-    },
-    "nodeArguments": [
-      "--loader=ts-node/esm"
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "@types/node": "18.11.18",
+    "ava": "5.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   }
 }
