--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "test": "ava"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
-    },
+    "timeout": "10m",
+    "extensions": [
+      "ts"
+    ],
     "nodeArguments": [
       "--loader=ts-node/esm"
     ]
@@ -21,8 +19,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "ava": "^4.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
