--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
+    "@types/node": "^20.8.6",
     "ava": "^3.15.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
