--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+	"compilerOptions": {
+		"target": "ES6",
+		"moduleResolution": "node",
+		"resolveJsonModule": true
+	}
 }
