--- a/package.json
+++ b/package.json
@@ -10,19 +10,16 @@
     "extensions": {
       "ts": "module"
     },
-    "nonSemVerExperiments": {
-      "configurableModuleFormat": true
-    },
     "nodeArguments": [
-      "--loader=ts-node/esm"
+      "--loader=tsx"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^3.15.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.5",
+    "ava": "^5.3.1",
+    "tsx": "^3.13.0"
   }
 }
