--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.9.5",
+    "@types/lodash": "^4.14.200",
+    "@types/node": "^20.8.8",
     "ava": "^5.3.1",
-    "tsx": "^3.13.0"
+    "tsx": "^3.13.0",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
