--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "test": "ava"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
-    "nodeArguments": [
-      "--loader=tsx"
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.200",
-    "@types/node": "^20.8.8",
-    "ava": "^5.3.1",
-    "tsx": "^3.13.0",
-    "typescript": "^4.9.5"
+    "@types/node": "^18.14.6",
+    "ava": "^3.15.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
