--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "ava"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
+    "require": [
+      "ts-node/register"
+    ],
+    "extensions": [
+      "ts"
+    ],
     "nodeArguments": [
       "--loader=tsx"
     ]
@@ -18,8 +21,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.9.5",
+    "@types/node": "^20.9.3",
     "ava": "^5.3.1",
-    "tsx": "^3.13.0"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.13.0",
+    "typescript": "^4.9.5"
   }
 }
