--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^20.11.17",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "lodash.orderby": "^4.6.0",
+    "lodash.pullallby": "^4.7.0",
+    "lodash.remove": "^4.7.0"
   }
 }
