--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "module": "commonjs",
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": ["./src/**/*.ts"]
 }
