--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^20.11.28",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
   }
