--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ava/typescript": "^4.1.0",
-    "ava": "^6.0.1",
+    "@types/node": "^20.12.5",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@ava/typescript": "^4.1.0",
+    "ava": "^6.1.2"
   }
 }
