--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/lodash": "^4.17.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.12.7",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21"
   }
 }
